# almaBTE

./: AUTHORS  CMakeLists.txt  LICENSE  NOTICE  README.md
include/: analytic1d.hpp  aux_cubic.hpp  beyondRTA.hpp  bulk_hdf5.hpp  bulk_properties.hpp  cmakevars.hpp.in  constants.hpp  deviational_particle.hpp  dos.hpp  dynamical_matrix.hpp  exceptions.hpp  gpu_solver.hpp  green1d.hpp  io_utils.hpp  isotopic_scattering.hpp  periodic_table.hpp  processes.hpp  qpoint_grid.hpp  sampling.hpp  shengbte_iter.hpp  structures.hpp  superlattices.hpp  symmetry.hpp  utilities.hpp  vasp_io.hpp  vc.hpp
src/: CMakeLists.txt  VCAbuilder.cpp  analytic1d.cpp  beyondRTA.cpp  bulk_hdf5.cpp  bulk_properties.cpp  cumulativecurves.cpp  dynamical_matrix.cpp  gpu_solver.cpp  green1d.cpp  isotopic_scattering.cpp  kappa_Tsweep.cpp  kappa_crossplanefilms.cpp  kappa_inplanefilms.cpp  periodic_table.cpp  phononinfo.cpp  processes.cpp  qpoint_grid.cpp  read_shengcontrol.f90  sampling.cpp  shengbte_iter.cpp  shengbtepp.cpp  steady_montecarlo1d.cpp  steady_montecarlo1d_powersource.cpp  structures.cpp  superlattice_builder.cpp  superlattices.cpp  symmetry.cpp  transient_analytic1d.cpp  vasp_io.cpp  vc.cpp
test/: CMakeLists.txt  analytic1D_MSD_test.cpp  analytic1D_SPR-FL_test.cpp  analytic1D_SPR_test.cpp  analytic1D_basicprop_test.cpp  analytic1D_psi_test.cpp  beyondRTA_test.cpp  born_test.cpp  conductivity_test.cpp  cumulativecurves_test.cpp  cv_test.cpp  dynamical_matrix_test.cpp  force_constants_3rd_test.cpp  force_constants_test.cpp  green1d_test.cpp  hdf5_read_test.cpp  hdf5_scattering_test.cpp  hdf5_write_test.cpp  isotopic_scattering_test.cpp  kappa_Tsweep_test.cpp  kappa_crossplanefilms_test.cpp  kappa_inplanefilms_test.cpp  kappa_sg_test.cpp  mass_test.cpp  metatest.cpp  mpi_test.cpp  p3_test.cpp  poscar_test.cpp  proc_serialization_test.cpp  processes_test.cpp  qpoint_grid_test.cpp  steady_montecarlo1d_test.cpp  superlattice_builder_test.cpp  symmetry_test.cpp  transient_analytic1d_test.cpp  vc_test.cpp
